working auth + getting task list

--- a/MvcApplication1/packages.config
+++ b/MvcApplication1/packages.config
@@ -21,6 +21,7 @@
   <package id="PiranhaCMSMvc" version="2.1.3" targetFramework="net45" />
   <package id="PiranhaCMSOak" version="1.0.0.11" targetFramework="net45" />
   <package id="rake-dot-net" version="1.3.8" targetFramework="net45" />
+  <package id="RestSharp" version="104.2.0" targetFramework="net45" />
   <package id="specwatchr" version="1.7.4" targetFramework="net45" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
